<resources>
    <string name="app_name">Resupply</string>
    <string name="e_mail">E-mail</string>
    <string name="login">LOGIN</string>
    <string name="welcome_to">Welcome to</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="continue_with_facebook">Continue With Facebook</string>
    <string name="login_button">Login</string>
    <string name="furniture">Furniture</string>
    <string name="donate">DONATE</string>
    <string name="clothing">Clothing</string>
    <string name="appliances">Appliances</string>
    <string name="household">Household</string>
    <string name="misc">Misc.</string>
    <string name="forgot_password_text_view">Forgot Password</string>
    <string name="submit">Submit</string>
</resources>
