<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorBackGround"
    tools:context=".model.ForgotPassword">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/brown_bold"
        android:text="@string/welcome_to"
        android:textSize="33dp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:lineSpacingMultiplier="2.5"
        android:lineSpacingExtra="6dp"
        android:paddingBottom="15px"
        />

    <ImageView
        android:src="@drawable/resupply_logo_033x"
        android:layout_width="280dp"
        android:contentDescription="@string/app_name"
        android:layout_height="84dp"
        android:layout_gravity="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="13dp"
        android:layout_marginTop="60dp"
        android:background="@color/white"
        android:orientation="vertical"
        android:layout_marginRight="13dp"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password_text_view"
            android:textSize="54px"
            android:fontFamily="@font/brown_bold"
            android:textColor="#747474"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Enter your E-mail below, and we’ll send you a link to reset your password"
            android:fontFamily="@font/brown_regular"
            android:textColor="#747474"
            android:textSize="40px"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            />

        <EditText
            android:id="@+id/email_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="#f2f2f2"
            android:hint="@string/e_mail"
            android:textColorHint="#c0c0c0"
            android:fontFamily="@font/brown_regular"
            android:textSize="48px"
            android:textColor="#747474"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:padding="6dp"
            android:inputType="textEmailAddress"
            />

        <Button

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/round_button"
            android:text="@string/submit"
            android:textSize="48px"
            android:textColor="@color/white"
            android:fontFamily="@font/brown_regular"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="12dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:textAllCaps="false"
            />

    </LinearLayout>

</LinearLayout>